# Intra-Exchange-Triangular-Arbitrage

./: .dockerignore  .env  .env.example  Dockerfile  Makefile  README.md  alembic.ini  arbitrage_bot.py  docker-compose.yml  make.bat  pyproject.toml
migrations/: README.md  env.py
migrations/versions/: 202510260001_create_core_tables.py
scripts/: format.sh  lint.sh  migrate.sh
tests/: test_executor.py  test_orderbook.py  test_signals.py  test_triangle_math.py
triarb/: __init__.py  config.py  logging.py  main.py
triarb/api/: routes.py  server.py
triarb/data/: db.py  models.py  redis_state.py  repo.py
triarb/engine/: executor.py  fees.py  inventory.py  risk.py  signals.py  simulator.py  triangle.py
triarb/exchange/: base.py  binance.py  symbolmap.py
triarb/marketdata/: aggregator.py  orderbook.py  ws_client.py
triarb/utils/: math.py  retry.py
