[tool.poetry]
name = "triarb"
version = "0.1.0"
description = "Single-exchange triangular arbitrage engine"
authors = ["Codex <codex@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.24.0"
ccxt = "^4.1.59"
websockets = "^12.0"
aiohttp = "^3.9.5"
httpx = "^0.27.0"
redis = "^5.0.4"
prometheus-client = "^0.20.0"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
tenacity = "^8.2.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
black = "^24.4.2"
ruff = "^0.4.4"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
